--- a/about-en.html
+++ b/about-en.html
@@ -41,11 +41,11 @@
                 </li>
                 <li><a class="menu__link lang" href="about-tm.html">ТМ</a></li>
                 <li><a class="menu__link lang" href="about-ru.html">RU</a></li>
+                <li><a href="contact-us-en.html" class="header__button">CONTACT US</a></li>
                 <li><span class="menu__arrow"></span></li>
               </ul>
             </nav>
           </div>
-          <a href="contact-us-en.html" class="header__button">CONTACT US</a>
         </div>
       </header>
       <section class="about">
