--- a/about-ru.html
+++ b/about-ru.html
@@ -37,11 +37,11 @@
                     <li><a class="menu__link" href="contacts-ru.html">Контакты</a></li>
                     <li><a class="menu__link lang" href="about-tm.html">ТМ</a></li>
                     <li><a class="menu__link lang" href="about-en.html">EN</a></li>
+                    <li><a href="contact-us-ru.html" class="header__button">Связаться</a></li>
                     <li><span class="menu__arrow"></span></li>
                   </ul>
                 </nav>
               </div>
-              <a href="contact-us-ru.html" class="header__button">Связаться</a>
             </div>
           </header>
       <section class="about">
