--- a/contact-us-en.html
+++ b/contact-us-en.html
@@ -41,11 +41,12 @@
                 </li>
                 <li><a class="menu__link lang" href="contact-us-tm.html">ТМ</a></li>
                 <li><a class="menu__link lang" href="contact-us-ru.html">RU</a></li>
+                <li> <a href="contact-us-en.html" class="header__button">CONTACT US</a></li>
                 <li><span class="menu__arrow"></span></li>
               </ul>
             </nav>
           </div>
-          <a href="contact-us-en.html" class="header__button">CONTACT US</a>
+         
         </div>
       </header>
       <section class="us">
