--- a/contact-us-ru.html
+++ b/contact-us-ru.html
@@ -36,11 +36,12 @@
                 <li><a class="menu__link" href="contacts-ru.html">Контакты</a></li>
                 <li><a class="menu__link lang" href="contact-us-tm.html">ТМ</a></li>
                 <li><a class="menu__link lang" href="contact-us-en.html">EN</a></li>
+                <li><a href="contact-us-ru.html" class="header__button">Связаться</a></li>
                 <li><span class="menu__arrow"></span></li>
               </ul>
             </nav>
           </div>
-          <a href="contact-us-ru.html" class="header__button">Связаться</a>
+          
         </div>
       </header>
       <section class="us">
