--- a/contact-us-tm.html
+++ b/contact-us-tm.html
@@ -47,11 +47,12 @@
                 </li>
                 <li><a class="menu__link lang" href="contact-us-en.html">EN</a></li>
                 <li><a class="menu__link lang" href="contact-us-ru.html">RU</a></li>
+                <li><a href="contact-us-tm.html" class="header__button">Habarlaşmak</a></li>
                 <li><span class="menu__arrow"></span></li>
               </ul>
             </nav>
           </div>
-          <a href="contact-us-tm.html" class="header__button">Habarlaşmak</a>
+          
         </div>
       </header>
       <section class="us">
