--- a/contacts-en.html
+++ b/contacts-en.html
@@ -42,11 +42,12 @@
                 </li>
                 <li><a class="menu__link lang" href="contacts-tm.html">ТМ</a></li>
                 <li><a class="menu__link lang" href="contacts-ru.html">RU</a></li>
+                <li> <a href="contact-us-en.html" class="header__button">CONTACT US</a></li>
                 <li><span class="menu__arrow"></span></li>
               </ul>
             </nav>
           </div>
-          <a href="contact-us-en.html" class="header__button">CONTACT US</a>
+         
         </div>
       </header>
  <section class="contact">
