--- a/contacts-tm.html
+++ b/contacts-tm.html
@@ -47,13 +47,14 @@
                 </li>
                 <li><a class="menu__link lang" href="contacts-en.html">EN</a></li>
                 <li><a class="menu__link lang" href="contacts-ru.html">RU</a></li>
+                <li> <a href="contact-us-tm.html" class="header__button"
+            >Habarlaşmak</a
+          ></li>
                 <li><span class="menu__arrow"></span></li>
               </ul>
             </nav>
           </div>
-          <a href="contact-us-tm.html" class="header__button"
-            >Habarlaşmak</a
-          >
+         
         </div>
       </header>
  <section class="contact">
