--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
                 <li><a class="menu__link" href="contacts-ru.html">Контакты</a></li>
                 <li><a class="menu__link lang" href="main-tm.html">ТМ</a></li>
                 <li><a class="menu__link lang" href="main-en.html">EN</a></li>
+                <li><a href="contact-us-ru.html" class="header__button">Связаться</a></li>
                 <li><span class="menu__arrow"></span></li>
               </ul>
             </nav>
           </div>
-          <a href="contact-us-ru.html" class="header__button">Связаться</a>
+          
         </div>
       </header>
       <main class="main">
@@ -67,7 +68,7 @@
         <div class="services__container _container">
           <div class="services__body">
             <div class="services__subtitle element-animation _subtitle">
-              Our Best Quality
+              Лучшее качество
             </div>
             <div class="services__title element-animation _title">
               Наши Услуги
