--- a/main-en.html
+++ b/main-en.html
@@ -42,11 +42,12 @@
                 </li>
                 <li><a class="menu__link lang" href="main-tm.html">ТМ</a></li>
                 <li><a class="menu__link lang" href="index.html">RU</a></li>
+                <li><a href="contact-us-en.html" class="header__button">CONTACT US</a></li>
                 <li><span class="menu__arrow"></span></li>
               </ul>
             </nav>
           </div>
-          <a href="contact-us-en.html" class="header__button">CONTACT US</a>
+          
         </div>
       </header>
       <main class="main">
