--- a/main-tm.html
+++ b/main-tm.html
@@ -47,13 +47,14 @@
                 </li>
                 <li><a class="menu__link lang" href="main-en.html">EN</a></li>
                 <li><a class="menu__link lang" href="index.html">RU</a></li>
+                <li> <a href="contact-us-tm.html" class="header__button"
+            >Habarlaşmak</a
+          ></li>
                 <li><span class="menu__arrow"></span></li>
               </ul>
             </nav>
           </div>
-          <a href="contact-us-tm.html" class="header__button"
-            >Habarlaşmak</a
-          >
+         
         </div>
       </header>
       <main class="main">
@@ -79,7 +80,7 @@
         <div class="services__container _container">
           <div class="services__body">
             <div class="services__subtitle element-animation _subtitle">
-              Best Quality
+              Iň gowy hilimiz
             </div>
             <div class="services__title element-animation _title">
               Hyzmatlarymyz
