--- a/services-en.html
+++ b/services-en.html
@@ -45,11 +45,11 @@
                 <li>
                   <a class="menu__link lang" href="services-ru.html">RU</a>
                 </li>
+                <li> <a href="contact-us-en.html" class="header__button">CONTACT US</a></li>
                 <li><span class="menu__arrow"></span></li>
               </ul>
             </nav>
           </div>
-          <a href="contact-us-en.html" class="header__button">CONTACT US</a>
         </div>
       </header>
       <section class="services">
