--- a/services-ru.html
+++ b/services-ru.html
@@ -41,18 +41,18 @@
                 </li>
                 <li><a class="menu__link lang" href="services-tm.html">ТМ</a></li>
                 <li><a class="menu__link lang" href="services-en.html">EN</a></li>
+                <li><a href="contact-us-ru.html" class="header__button">Связаться</a></li>
                 <li><span class="menu__arrow"></span></li>
               </ul>
             </nav>
           </div>
-          <a href="contact-us-ru.html" class="header__button">Связаться</a>
         </div>
       </header>
       <section class="services">
         <div class="services__container _container">
           <div class="services__body">
             <div class="services__subtitle element-animation _subtitle">
-              Our Best Quality
+              Лучшее качество
             </div>
             <div class="services__title element-animation _title">
               Наши Услуги
