--- a/services-tm.html
+++ b/services-tm.html
@@ -47,18 +47,18 @@
                 </li>
                 <li><a class="menu__link lang" href="services-en.html">EN</a></li>
                 <li><a class="menu__link lang" href="services-ru.html">RU</a></li>
+                <li><a href="contact-us-tm.html" class="header__button">Habarlaşmak</a></li>
                 <li><span class="menu__arrow"></span></li>
               </ul>
             </nav>
           </div>
-          <a href="contact-us-tm.html" class="header__button">Habarlaşmak</a>
         </div>
       </header>
       <section class="services">
         <div class="services__container _container">
           <div class="services__body">
             <div class="services__subtitle element-animation _subtitle">
-              Our Best Quality
+              Iň gowy hilimiz
             </div>
             <div class="services__title element-animation _title">
               Hyzmatlarymyz
