--- a/about-en.html
+++ b/about-en.html
@@ -69,7 +69,7 @@
                 Turkmenistan on carrying out insurance activities. <br />
               </div>
               <div class="about__btn">
-                <a href="contacts-en.html" class="ab-btn element-animation"
+                <a href="contact-us-en.html" class="ab-btn element-animation"
                   >Contact Us</a
                 >
               </div>
@@ -95,19 +95,19 @@
           <div id="myDiv" class="ratting__body">
             <div class="ratting__column ratting__c-1">
               <div class="ratting__item">
-                <div id="out-c" class="ratting-item__number">0+</div>
+                <div id="out-c" class="ratting-item__number">15+</div>
                 <div class="ratting-item__text">Insurance services</div>
               </div>
             </div>
             <div class="ratting__column ratting__c-2">
               <div class="ratting__item">
-                <div id="out-p" class="ratting-item__number">0+</div>
+                <div id="out-p" class="ratting-item__number">900+</div>
                 <div class="ratting-item__text">Satisfied clients</div>
               </div>
             </div>
             <div class="ratting__column ratting__c-3">
               <div class="ratting__item">
-                <div id="out-r" class="ratting-item__number">0+</div>
+                <div id="out-r" class="ratting-item__number">1000+</div>
                 <div class="ratting-item__text">Treaties</div>
               </div>
             </div>
