--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                 осуществлении страховой деятельности. <br />
               </div>
               <div class="about__btn">
-                <a href="contacts-ru.html" class="ab-btn element-animation">Наши Контакты</a>
+                <a href="contact-us-ru.html" class="ab-btn element-animation">Связаться</a>
               </div>
             </div>
             <div class="about__column">
@@ -435,19 +435,19 @@
           <div id="myDiv" class="ratting__body">
             <div class="ratting__column ratting__c-1">
               <div class="ratting__item">
-                <div id="out-c" class="ratting-item__number">0+</div>
+                <div id="out-c" class="ratting-item__number">15+</div>
                 <div class="ratting-item__text">Страховые услуги</div>
               </div>
             </div>
             <div class="ratting__column ratting__c-2">
               <div class="ratting__item">
-                <div id="out-p" class="ratting-item__number">0+</div>
+                <div id="out-p" class="ratting-item__number">900+</div>
                 <div class="ratting-item__text">Довольные клиенты</div>
               </div>
             </div>
             <div class="ratting__column ratting__c-3">
               <div class="ratting__item">
-                <div id="out-r" class="ratting-item__number">0+</div>
+                <div id="out-r" class="ratting-item__number">1000+</div>
                 <div class="ratting-item__text">Договоров</div>
               </div>
             </div>
