--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </div>
         </div>
         <div class="main__bcg _ibg">
-          <img class="main__bcg-img" src="images/main/main-8.jpg" />
+          <img class="main__bcg-img" src="images/main/m-10.jpg" />
         </div>
       </main>
       <section class="services">
