--- a/main-en.html
+++ b/main-en.html
@@ -65,7 +65,7 @@
           </div>
         </div>
         <div class="main__bcg _ibg">
-          <img class="main__bcg-img" src="images/main/main-8.jpg" />
+          <img class="main__bcg-img" src="images/main/m-11.jpg" />
         </div>
       </main>
       <section class="services">
