--- a/contact-us-en.html
+++ b/contact-us-en.html
@@ -124,7 +124,7 @@
                   </div>
                   <div class="us-form__item">
                     <div class="us-form__button">
-                      <button>Send</button>
+                      <button onclick="func_1()">Send</button>
                     </div>
                   </div>
                 </div>
