--- a/contact-us-ru.html
+++ b/contact-us-ru.html
@@ -125,7 +125,7 @@
                   </div>
                   <div class="us-form__item">
                     <div class="us-form__button">
-                      <button>Отправить</button>
+                      <button onclick="func_1()">Отправить</button>
                     </div>
                   </div>
                 </div>
