--- a/contact-us-tm.html
+++ b/contact-us-tm.html
@@ -130,7 +130,7 @@
                   </div>
                   <div class="us-form__item">
                     <div class="us-form__button">
-                      <button>Ibermek</button>
+                      <button onclick="func_1()">Ibermek</button>
                     </div>
                   </div>
                 </div>
